--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@capacitor/app": "4.0.1",
+    "@capacitor/android": "4.0.1",
+    "@capacitor/browser": "^4.0.1",
     "@capacitor/core": "4.0.1",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/keyboard": "4.0.1",
+    "@capacitor/share": "^4.0.1",
+    "@capacitor/splash-screen": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
     "rxjs": "~6.6.0",
